cluster/base/infrastructure/17-paperless-ngx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    pod-security.kubernetes.io/enforce: baseline
