cluster/base/infrastructure/17-paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless
spec:
  selector:
    app: paperless-ngx
  ports:
    - port: 8000
      targetPort: 8000
